--- a/style.css
+++ b/style.css
@@ -23,8 +23,6 @@ body {
   color: #dde6ed;
 }
 
-
-
 header {
   background-color: #dde6ed;
   color: #27374d;
@@ -38,25 +36,44 @@ header {
   justify-content: space-evenly;
 }
 
-#nav-1{
-margin-top: 35px;
-}
-
-#nav-2{
+#nav-1 {
   margin-top: 35px;
 }
 
-#nav-3{
-  border-radius: 5%;
+#nav-2 {
+  margin-top: 35px;
+}
+
+#nav-3 {
+  background-color: #000000;
+  border-radius: 4px;
+  padding-top: 5px;
+  padding-right: 5px;
+  padding-left: 5px;
+  width: 80px;
 }
 
 button {
+  text-decoration: none;
+  text-align: center;
   background-color: #9db2bf;
-  color: #dde6ed;
+  color: black;
   font-family: Arial, sans-serif;
+  border-radius: 6px;
+  transition-duration: 0.4s;
+  border: 2px solid #000000;
+  
+}
+
+/* button-link */
+#link{
   text-decoration: none;
 }
 
+.button:hover {
+  background-color: #668395; 
+  color: rgb(0, 0, 0);
+}
 h1 {
   font-size: 24px;
   margin-bottom: 10px;
@@ -91,6 +108,7 @@ h2 {
   margin-bottom: 20px;
   margin-top: 20px;
   font-style: italic;
+  text-decoration: none;
 }
 
 footer {
@@ -106,4 +124,5 @@ nav {
 
 #contact {
   border: 2px solid #9db2bf;
+  padding: 50px;
 }
